# aac-ZZ3

./: .gitignore  CMakeLists.txt  README.md
ConvexHull/: README.md
Delaunay/: README.md
include/: geometry.hpp
include/BiggetRectangleInHistogram/: biggestRectangleInHistogram.hpp
include/ConvexHull/: convex_hull.hpp
include/CycleDetection/: cycleDetection.hpp
include/Delaunay/: delaunay.hpp
include/FastExponentiation/: fastExponentiation.hpp
include/Geometry/: orientation.hpp  point.hpp  triangle.hpp
include/LinearEquationSystem/: linearEquation.hpp
src/BiggestRectangleInHistogram/: biggestRectangleInHistogram.cpp
src/ConvexHull/: convex_hull.cpp  main.cpp
src/Delaunay/: delaunay.cpp  main.cpp
src/FastExponentiation/: fastExponentiation.cpp  main.cpp
src/Geometry/: orientation.cpp
src/LinearEquationSystem/: linearEquation.cpp
src/Test/: biggestRectangleInHistogramTest.cpp  convexHullTest.cpp  cycleDetectionTest.cpp  delaunayTest.cpp  fastExponentiationTest.cpp  linearEquationTest.cpp
